samples/_failures_safe/1761618387_7a6d5d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32ebfd10.c: In function ‘tokenize’:
./samples/SAFE/__tmp_32ebfd10.c:165:36: error: ‘TOKEN’ undeclared (first use in this function)
  165 |         tokens[token_count].type = TOKEN
      |                                    ^~~~~
./samples/SAFE/__tmp_32ebfd10.c:165:36: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_32ebfd10.c:165:41: error: expected ‘;’ at end of input
  165 |         tokens[token_count].type = TOKEN
      |                                         ^
      |                                         ;
./samples/SAFE/__tmp_32ebfd10.c:165:9: error: expected declaration or statement at end of input
  165 |         tokens[token_count].type = TOKEN
      |         ^~~~~~
./samples/SAFE/__tmp_32ebfd10.c:165:9: error: expected declaration or statement at end of input
